--- a/estilo.css
+++ b/estilo.css
@@ -15,3 +15,12 @@ img{width: 100px;}
     padding-left: 20px;
     width: 280px;
 }
+a{
+    text-decoration: none;
+    font-weight: bolder;
+}
+a:hover{
+    color: black;
+    text-decoration: underline;
+}
+a:active{color: rgb(32, 86, 87);}
